<resources>
    <string name="app_name">My NewsApi</string>
    <string name="software">Software</string>
    <string name="news">News</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="source">Source</string>
    <string name="date">Date</string>
    <string name="subtitle">Subtitle</string>
    <string name="title_news">Title of News</string>
    <string name="glide">Glide</string>
    <string name="picasso">Picasso</string>
    <string name="selected_elementRV">SelectedElement</string>
    <string name="transition_title">transitionTitle</string>
    <string name="transition_image">transitionImage</string>
    <string name="transition_publish_at">transitionPublishAt</string>
    <string name="transition_author">transitionAuthor</string>
    <string name="transition_source">transitionSource</string>

    <string-array name="news_category">
        <item>All</item>
        <item>Health</item>
        <item>Software</item>
        <item>Travel</item>
        <item>Politics</item>
        <item>Science</item>
    </string-array>

</resources>
