<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_side_card"
        android:layout_marginTop="@dimen/margin_card"
        android:layout_marginRight="@dimen/margin_side_card"
        android:layout_marginBottom="@dimen/margin_card"
        app:cardCornerRadius="@dimen/card_corner_Radius"
        app:cardElevation="@dimen/cardview_default_elevation">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/title"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/item_title_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.102" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_alignLeft="@+id/title"
                android:layout_alignBottom="@+id/title"
                android:layout_marginTop="@dimen/margin_text_in_card"
                android:drawablePadding="@dimen/drawable_padding"
                android:ellipsize="end"
                android:gravity="bottom"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.14"
                app:layout_constraintStart_toEndOf="@+id/source"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/author"
                android:layout_alignLeft="@+id/author"
                android:layout_alignTop="@+id/author"
                android:layout_alignEnd="@+id/author"
                android:layout_alignRight="@+id/author"
                android:layout_alignBottom="@+id/author"
                android:layout_marginTop="@dimen/margin_text_in_card"
                android:drawablePadding="@dimen/drawable_padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/source"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/publishedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/author"
                android:layout_alignLeft="@+id/author"
                android:layout_alignBottom="@+id/author"
                android:layout_marginTop="@dimen/margin_text_in_card"
                android:text="@string/date"
                android:textColor="@color/date_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/source"
                app:layout_constraintTop_toBottomOf="@+id/source"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>